--- a/static/dgraphql-build/graphiql.html
+++ b/static/dgraphql-build/graphiql.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
-<!--
- Copyright 2019 dfuse Platform Inc.
-
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
--->
-
 <html>
 <head>
-    <title>GraphiQL: Discover the dfuse GraphQL interface</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/graphiql@0.16.0/graphiql.css"/>
+    <title>中数文联盟链实时系统</title>
+    <link rel="stylesheet" href="graphiql.css"/>
     <link rel="stylesheet" href="graphiql_dfuse_override.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.min.js"></script>
-    <script src="//unpkg.com/graphiql@0.16.0/graphiql.js"></script>
-    <script src="//unpkg.com/subscriptions-transport-ws@0.8.3/browser/client.js"></script>
-    <script src="//unpkg.com/graphiql-subscriptions-fetcher@0.0.2/browser/client.js"></script>
+    <script src="react.min.js"></script>
+    <script src="react-dom.min.js"></script>
+    <script src="graphiql.min.js"></script>
+    <script src="subscriptions-transport-ws.js"></script>
+    <script src="graphiql-subscriptions-fetcher.js"></script>
     <script src="helper.js"></script>
-    <script src="https://unpkg.com/@dfuse/client@0.3.9/dist/dfuse-client.umd.js"></script>
+    <script src="zsw-lishi.umd.js"></script>
 </head>
 <body style="width: 100%; height: 100%; margin: 0; overflow: hidden;">
 
 <div id="graphiql" style="height: 100vh;">Loading...</div>
 
 <script>
-    window.DfuseClientConfig = --== json . ==--;
+    //window.ZswLishiClientConfig = --== json . ==--;
+    window.ZswLishiClientConfig = {"apiKey":"web_0000","authUrl":"null://zswlishi"};
 </script>
 
 <script>
@@ -42,19 +26,20 @@
     const urlPathSegments = url.toString().split("/");
     const queryParams = url.searchParams
 
-    const server = urlPathSegments[2];
-    const proto = urlPathSegments[0];
+    //const server = urlPathSegments[2];
+    const server ="example.testnet.chao7.cn"
+    const proto ="https"// urlPathSegments[0];
     const alphaSchema = isAlphaSchemaQueryParamFound(queryParams)
 
-    const { createDfuseClient } = dfuseClient
+    const { createZswLishiClient } = zswLishiClient
 
-    if (!window.DfuseClientConfig) {
-        window.DfuseClientConfig = {}
+    if (!window.ZswLishiClientConfig) {
+        window.ZswLishiClientConfig = {}
     }
 
-    const client = createDfuseClient({
-        apiKey: window.DfuseClientConfig.apiKey || "web_123456789abcdef",
-        authUrl: window.DfuseClientConfig.authUrl || "null://",
+    const client = createZswLishiClient({
+        apiKey: window.ZswLishiClientConfig.apiKey || "web_123456789abcdef",
+        authUrl: window.ZswLishiClientConfig.authUrl || "null://",
     })
     let token;
 
