--- a/static/dgraphql-build/graphiql.html
+++ b/static/dgraphql-build/graphiql.html
@@ -14,11 +14,11 @@
 </head>
 <body style="width: 100%; height: 100%; margin: 0; overflow: hidden;">
 
-<div id="graphiql" style="height: 100vh;">Loading...</div>
+<div id="graphiql" style="height: 100vh;">加载中...</div>
 
 <script>
-    //window.ZswLishiClientConfig = --== json . ==--;
-    window.ZswLishiClientConfig = {"apiKey":"web_0000","authUrl":"null://zswlishi"};
+    window.ZswLishiClientConfig = --== json . ==--;
+    
 </script>
 
 <script>
@@ -26,9 +26,8 @@
     const urlPathSegments = url.toString().split("/");
     const queryParams = url.searchParams
 
-    //const server = urlPathSegments[2];
-    const server ="example.testnet.chao7.cn"
-    const proto ="https"// urlPathSegments[0];
+    const server = urlPathSegments[2];
+    const proto = urlPathSegments[0];
     const alphaSchema = isAlphaSchemaQueryParamFound(queryParams)
 
     const { createZswLishiClient } = zswLishiClient
